manifests/dummy-chassis-app/auto/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dummy-chassis-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-chassis-app
  template:
    metadata:
      labels:
        app: dummy-chassis-app
    spec:
      containers:
        - name: dummy-chassis-app
          securityContext:
            runAsUser: 1000
            runAsGroup: 3000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
